# vaccination-predictive-lab

./: README.md  app.py  main.py  pyproject.toml
data/cleaned/: iqvia_campagne_cleaned.csv  iqvia_couverture_cleaned.csv  iqvia_doses_cleaned.csv  iqvia_fusionne_cleaned.csv  sursaud_cleaned.csv  sursaud_iqvia_fusionne.csv  sursaud_iqvia_fusionne_finale.csv  sursaud_regional_cleaned.csv
data/processed/: predictions_2026_2027.csv  predictions_2027_2028.csv  predictions_stables_2026_2028.csv
data/raw/iqvia/2022/: campagne-2022.csv  couverture-2022.csv  dose-acte-2022.csv
data/raw/iqvia/2023/: campagne-2023.csv  couverture-2023.csv  dose-acte-2023.csv
data/raw/iqvia/2024/: campagne-2024.csv  dose-acte-2024.csv
data/raw/sursaud/: grippe-regionales.csv  grippe-urgence.csv
hackathon-epitech/: .env  index.html  package-lock.json  package.json
hackathon-epitech/src/: App.css  App.tsx  index.css
hackathon-epitech/src/map/: debugmap.tsx  heatmap.tsx
notebooks/: 02_data_fusion.ipynb  04_model_training.ipynb
notebooks/exploration/: 01_exploration_iqvia.ipynb  02_exploration_sursaud_national.ipynb  03_exploration_sursaud_departemental.ipynb  03_exploration_sursaud_regional.ipynb
notebooks/fusion/: 02_fusion_iqvia.ipynb  03_fusion_sursaud_iqvia_national.ipynb
notebooks/ingestion/: 01_ingestion_iqvia.ipynb  01_ingestion_sursaud_departemental.ipynb  01_ingestion_sursaud_national.ipynb  01_ingestion_sursaud_regional.ipynb
notebooks/validation/: 01_validation_fusion_sursaud_iqvia.ipynb
src/models/: 01_model_prophet_vaccine_demand.ipynb
